基本功能实现

--- a/文档/cart.html
+++ b/文档/cart.html
@@ -2,10 +2,10 @@
 {% load guolvqi %}
 {% load static %}
     <link rel="stylesheet" href="/static/css/car/carts.css" type="text/css">
-    <link rel="stylesheet" href="/static/css/car/reset.css/" type="text/css">
+    <link rel="stylesheet" href="/static/css/car/reset.css" type="text/css">
 
-    <script src="/static/js/car/jquery-1.11.0.min.js/" type="text/javascript"></script>
-    <script src="/static/js/car/carts.js/" type="text/javascript"></script>
+    <script src="/static/js/car/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script src="/文档/carts.js/" type="text/javascript"></script>
 {% block title %}
     购物车
 {% endblock %}
